--- a/SmartPhoneProducts1/products_page.html
+++ b/SmartPhoneProducts1/products_page.html
@@ -1,6 +1,6 @@
 <main>
         <head>
-                <link rel="stylesheet" href="productstyle.css">
+                <link rel="stylesheet" href="product-styles.css">
         </head>
     <h1>Used Smartphone Store</h1>
 
