--- a/WODs/BrowserHistory2/index.html
+++ b/WODs/BrowserHistory2/index.html
@@ -1,4 +1,9 @@
 <html lang="en">
+<body>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
     <h1> A history of web browser</h1>
     <h2>Table of Contents</h2>
 <li><a href="#Introduction">Introduction</a><br>
@@ -49,7 +54,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+
     
 </body>
 </html>
