--- a/Lab6/ex1.html
+++ b/Lab6/ex1.html
@@ -1,6 +1,6 @@
 <span id="output_span"></span>
 <script>
-
+/*
     age =  20;
 
     fav_num = 7;
@@ -10,10 +10,11 @@
     month_of_birth = 3;
 
    document.getElementById ("output_span").innerHTML
-   = (age + fav_num / day_of_birth * month_of_birth);
+   = (age + fav_num / day_of_birth * month_of_birth);*/
 
 //(age + fav_num) / day_of_birth * month_of_birth
 
+/*
 
 n = 20;
 
@@ -21,4 +22,38 @@ m = 2;
 
 result = n * ++m; //pre-increment $m
 
+result = n * m++; //post-increment $m
+
+n=20 
+
+n+=20;
+
+n=20
+z=1
+
+n+=z;
+*/
+
+
+first_name = "Justin";
+last_name = 'Ra';
+/*
+document.write(first_name + ' ' + last_name);
+
+document.write(`${first_name} ${last_name}`);
+*/
+
+
+document.write(`
+<table border="1">
+    <tr><th>Line</th><th>Name</th></tr>
+    <tr><td>1.</td><td>${first_name}</td></tr>
+    <tr><td>2.</td><td><br />
+        ${first_name}</td></tr>
+    <tr><td>3.</td><td>\n${first_name}</td></tr>
+    <tr><td>4.</td><td>'\n${first_name}'</td></tr>
+    <tr><td>5.</td><td>"\n${first_name}"</td></tr>
+</table>
+`)
 </script>
+
