--- a/Lab7/ex.html
+++ b/Lab7/ex.html
@@ -25,10 +25,10 @@ document.write('beer is something I dislike');
 
 quantity = 85 ;
 
+if ( quantity >= 25 ) {
 
-if ( quantity > 0 ) {
+            price = 35;
 
-    price = 100;
 
 }
 
@@ -40,11 +40,11 @@ if ( quantity > 0 ) {
 
     
 
-        else if ( quantity >= 25 ) {
+        else if ( quantity > 0 ) {
 
-            price = 35;
+    price = 100;
 
-}
+} 
 
     
 
