--- a/WODs/Invoice2/invoice.html
+++ b/WODs/Invoice2/invoice.html
@@ -49,10 +49,18 @@
     var tax = tax_rate * subtotal;
     
    //calculate shipping
-   if(subtotal )
+   if(subtotal <= 50){
+     shipping = 2;
+   }
+   else if (subtotal <= 100){
+     shipping= 5;
+   }
+   else  {
+     shipping = 0.05* subtotal;
+   }
 
     //calculate grand total
-    var total = subtotal + tax;
+    var total = subtotal + tax + shipping;
 </script>
 
 <html lang="en">
