--- a/Ra_Justin_Assignment1/static/invoice.html
+++ b/Ra_Justin_Assignment1/static/invoice.html
@@ -1,21 +1,13 @@
-<script src="./products_data.js" ></script>
-
+<script src="./products_data.js" type="text/javascript">
+</script>
 /* a sale that contains at least five different products (with prices of your choosing). You must use expressions and variables to compute the various needed values dynamically*/
 
-// Product Data
+
+</script>
+
+
 
     
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <link rel="stylesheet" href="form-style.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Invoice</title>
-    
-    </head>
      //compute extended prices:
   
      var extendedprice1 = quantity1 * price1;
