--- a/Ra_Justin_Assigment1/public/products_pageDBZ.html
+++ b/Ra_Justin_Assigment1/public/products_pageDBZ.html
@@ -80,7 +80,7 @@ function isNonNegInt(q, return_errors = false) {
                             <section class="item">
                                 <h2>${products[i].product}</h2>
                                 <br><img src="${products[i].image}">
-                                <p>${products[i].price}</p>
+                                <p>\$${products[i].price}</p>
                                 <label id="quantity${i}_label"}">Quantity</label>
                                 <input type="text" placeholder="0" name="quantity${i}" 
                                 onkeyup="checkQuantityTextbox(this);">
