--- a/Ra_Ashikawa_Kelliher_assigment4/tetris.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/tetris.html
@@ -1,3 +1,13 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+   <script>
+
 const canvas = document.getElementById('tetris');
 const context = canvas.getContext('2d');
 
@@ -151,7 +161,7 @@ function playerDrop() {
         arenaSweep();
         updateScore();
     }
-    dropCounter = 0;
+    dropCounter = 5;
 }
 
 function playerMove(offset) {
@@ -247,3 +257,9 @@ const player = {
 playerReset();
 updateScore();
 update();
+</script> 
+</body>
+</html>
+
+
+
