--- a/Ra_Ashikawa_Kelliher_assigment4/index.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/index.html
@@ -16,11 +16,13 @@
     </style>
 </head>
 <body>
-    <h1>The Falling Block Game!</h1>
-    <a href="./tetris.html">
-        <img src="./images/startbutton.jpeg" height="50%" width="50%"> </a>
-    <h1>Click the image to enter store!</h1>
-  
+    <div id="score"></div>
+        <canvas id="tetris" width="240" height="400">
+        <script src="tetris.js"></script>
+       <script>
+       
+</script>
+
 </body>
 
 </html>
