--- a/Ra_Ashikawa_Kelliher_assigment4/index.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/index.html
@@ -4,24 +4,68 @@
     <style>
       body {
         background: #202028;
+        display: flex;
         color: #fff;
         font-family: sans-serif;
         font-size: 2em;
         text-align: center;
       }
+
+      .player {
+            flex: 1 1 auto;
+        }
+
       canvas {
         border: solid .2em #fff;
         height: 90vh;
       }
+      #startBtn {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 1;
+        transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+      }          
+      #container {
+        display: inline-block;
+        position: relative;
+      }   
     </style>
 </head>
 <body>
-    <div id="score"></div>
-        <canvas id="tetris" width="240" height="400">
-        <script src="tetris.js"></script>
-       <script>
-       
-</script>
+
+    <div id="container">
+        <button type="button" id="startBtn" onclick="draw()"><img src="https://1.bp.blogspot.com/-fVAKH-3TLuo/W5onDDHje0I/AAAAAAAAB4I/q2ooE6GuzQkS80dtw1JILXjFWdfQ3IKkwCLcBGAs/s1600/breaoutplay.png">
+        </button>
+        <canvas id="tetris" width="600" height="550"></canvas>
+      </div>
+      <script src="tetris.html"></script>
+
+  <script>
+
+var startBtn = document.getElementById('startBtn');
+
+  </script>
+    <div class="player">
+        <div class="score"></div>
+        <canvas class="tetris" width="240" height="400"></canvas>
+    </div>
+
+    <div class="player">
+        <div class="score"></div>
+        <canvas class="tetris" width="240" height="400"></canvas>
+    </div>
+
+    <script src="arena.js"></script>
+    <script src="player.js"></script>
+    <script src="tetris.js"></script>
+    <script src="main.js"></script>
+
 
 </body>
 
