--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -1,3 +1,6 @@
+<script>class homepage {}</script>
+
+ 
 <html>
 <head>
     <title>Tetris</title>
@@ -27,11 +30,13 @@
     
   
     <div class="player">
+        <h1 class="player1">Player 1</h1>
         <div class="score"></div>
         <canvas class="tetris" width="240" height="400"></canvas>
     </div>
 
     <div class="player">
+        <h1 class="player2">Player 2</h1>
         <div class="score"></div>
         <canvas class="tetris" width="240" height="400"></canvas>
     </div>
