--- a/Ra_Ashikawa_Kelliher_assigment4/public/index.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/index.html
@@ -54,11 +54,11 @@ body{
         <div class="container">
             <input type="text" name="username" id="username" size="40" placeholder="Enter Username" required><br />
             <input type="password" name="password" size="40" placeholder="Enter Password" onkeyup="" required><br />
-            <input type="submit" value="Login" name="login"><br />
+            <input type="submit" value="Login" name="index"><br />
         </div>
     </form>
     <script>
-        login.action = "/login" + document.location.search;
+        index.action = "/index" + document.location.search;
     </script>
     <p>Login or Register as Player 2</p> <!--Login for player 2-->
  
@@ -66,11 +66,11 @@ body{
         <div class="container">
             <input type="text" name="username" id="username" size="40" placeholder="Enter Username" required><br />
             <input type="password" name="password" size="40" placeholder="Enter Password" onkeyup="" required><br />
-            <input type="submit" value="Login" name="login"><br />
+            <input type="submit" value="Login" name="index"><br />
         </div>
     </form>
     <script>
-        login.action = "/login" + document.location.search;
+        index.action = "/index" + document.location.search;
     </script>
     <h2>Register Here!</h2> <!--If not login information user will go to registration page-->  
     <input type="button" name="newuser" value="New User" 
