--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -1,52 +1,23 @@
-<script>class homepage {}</script>
-
- 
 <html>
 <head>
     <title>Tetris</title>
     <style>
       body {
         background: #202028;
-        display: flex;
         color: #fff;
         font-family: sans-serif;
         font-size: 2em;
         text-align: center;
       }
-
-      .player {
-            flex: 1 1 auto;
-        }
-
       canvas {
         border: solid .2em #fff;
         height: 90vh;
       }
-     
     </style>
 </head>
 <body>
-
-    
-  
-    <div class="player">
-        <h1 class="player1">Player 1</h1>
-        <div class="score"></div>
-        <canvas class="tetris" width="240" height="400"></canvas>
-    </div>
-
-    <div class="player">
-        <h1 class="player2">Player 2</h1>
-        <div class="score"></div>
-        <canvas class="tetris" width="240" height="400"></canvas>
-    </div>
-
-    <script src="arena.js"></script>
-    <script src="player.js"></script>
+    <div id="score"></div>
+    <canvas id="tetris" width="240" height="400" />
     <script src="tetris.js"></script>
-    <script src="main.js"></script>
-
-
 </body>
-
 </html>
