working login and guest

--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -13,9 +13,13 @@
         border: solid .2em #fff;
         height: 90vh;
       }
+     
     </style>
 </head>
+
 <body>
+<!--figure out how to make it fit in page"-->
+    <div id="uName">figure out how to put user name</div>  
     <div id="score"></div>
     <canvas id="tetris" width="240" height="400" />
     <script src="tetris.js"></script>
