--- a/Ra_Ashikawa_Kelliher_assigment4/public/index.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+        <script src="./server.js"></script>
+        
 <style>
 html{
     text-align: center;
@@ -61,9 +63,7 @@ body{
         login.action = "/login" + document.location.search;
     </script>
     
-    <script>
-        login.action = "/login" + document.location.search;
-    </script>
+  
     <h2>Register Here!</h2> <!--If not login information user will go to registration page-->  
     <input type="button" name="newuser" value="New User" 
         onclick="window.location='./register.html' + document.location.search;">
