--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -8,10 +8,12 @@
         font-family: sans-serif;
         font-size: 2em;
         text-align: center;
+        overflow: hidden;
+        
       }
       canvas {
         border: solid .2em #fff;
-        height: 90vh;
+        height: 80vh;
       }
      
     </style>
@@ -19,7 +21,8 @@
 
 <body>
 <!--figure out how to make it fit in page"-->
-    <div id="uName">figure out how to put user name</div>  
+    <div id="uName">figure out how to put user name</div> 
+    <br> 
     <div id="score"></div>
     <canvas id="tetris" width="240" height="400" />
     <script src="tetris.js"></script>
