--- a/Ra_Ashikawa_Kelliher_assigment4/public/register.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/register.html
@@ -45,7 +45,7 @@ body{
 
 <body>
     <div id="signup">
-        <form method="POST" action="" name="Register">
+        <form  name="RegFirstTime" method="GET" action="./registerUser">
             <h1>Please fill out the registration form!</h1>
             <input type="text" name="fullname" size="40" pattern="[a-zA-Z]+[ ]+[a-zA-Z]+"
                 placeholder="Enter First & Last Name"><br />
