correctly working register page !!!!!!!!!!!!!

--- a/Ra_Ashikawa_Kelliher_assigment4/public/index.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/index.html
@@ -46,7 +46,7 @@ body{
     <h1>Tetris Login</h1> 
     <p>To play you must be a member<br> Login or Register as Player 1</p> <!--Login for player 1-->
  
-    <form name="login for player 1" method="POST" action="./LoginForm">
+    <form name="login for player 1" method="POST" action="./logUserin">
         <div class="container">
             <input type="text" name="username" id="username" size="40" placeholder="Enter Username" required><br />
             <input type="password" name="password" size="40" placeholder="Enter Password" onkeyup="" required><br />
