--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -21,7 +21,7 @@
 
 <body>
 <!--figure out how to make it fit in page"-->
-    <div id="uName"><script></script>figure out user name</div> 
+    <div id="uName"><script>`${document.getElementById('username')}`</script>figure out user name</div> 
     <br> 
     <div id="score"></div>
     <canvas id="tetris" width="240" height="400" />
