--- a/Ra_Ashikawa_Kelliher_assigment4/public/register.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/register.html
@@ -2,29 +2,23 @@
 
 <head>
     <style>
-        html {
+         html {
             text-align: center;
-            background-image: url("./images/Tetris_Background.jpg");
+            background-image: url("./images/Tetris_Background.png");
             /*Background Image*/
-
+            padding: 150px;
+            background-size: cover;
         }
-
         body {
             height: 50%;
             display: table;
             width: 50%;
-
+            margin: 100px auto;
+            position: relative;
         }
-
-
-
         #signup {
-
-
             vertical-align: middle;
-            background-color: beige;
-
-
+            background-color: #9be198;
         }
     </style>
 
