--- a/Ra_Ashikawa_Kelliher_assigment4/public/playbutton.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/playbutton.html
@@ -3,11 +3,11 @@
 <head>
   <style>
     body {
-      background: #202028;
+      background: #282828;
       display: flex;
       color: #fff;
       font-family: sans-serif;
-      font-size: 2em;
+      font-size: 1.5em;
       text-align: center;
     }
     html {
@@ -18,13 +18,13 @@
     }
     #Controls {
       height: 100vh;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Press Start 2P', cursive;
     }
     #startBtn {
       border-color: white;
       background: none;
       position: absolute;
-      top: 25%;
+      top: 60%;
       /*Changing the position of texts*/
       left: 50%;
       z-index: 1;
@@ -39,6 +39,7 @@
       position: relative;
     }
   </style>
+ <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <body>
   <header div id="container">
@@ -47,20 +48,22 @@
       <a href="./homepage.html"> <img
           src="https://1.bp.blogspot.com/-fVAKH-3TLuo/W5onDDHje0I/AAAAAAAAB4I/q2ooE6GuzQkS80dtw1JILXjFWdfQ3IKkwCLcBGAs/s1600/breaoutplay.png"></a>
     </button>
-    <canvas id="tetris" width="600" height="400"></canvas>
+    <canvas id="tetris" width="600" height="100"></canvas>
     <!--Changing position of texts -->
     <a href="tetris.html"></a>
     </div>
-    <section id="Controls" align="center">
-      <b>
-        <h1>Controls are as followed</h1>
-
-        Left and right arrows moves pieces horozontally
+    <section id="Controls" align="left">
+      <h1>CONTROLS ARE AS FOLLOWS:</h1>
+      <br>
+      <ul style="list-style-type:none;">
+        <li>» ARROWS MOVE BLOCKS LEFT AND RIGHT</li>
         <br>
-        Q and W rotates the pieces
         <br>
-        Space bar moves the pieces down faster
-      </b>
+        <li>» Q AND W ROTATE THE BLOCKS</li>
+        <br>
+        <br>
+        <li>» SPACE BAR MOVES THE BLOCKS DOWN FASTER</li>
+      </ul>
     </section>
 
 
