--- a/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/homepage.html
@@ -23,24 +23,9 @@
 </head>
 
 <body>
-  <script>
-  let params = (new URL(document.location)).searchParams;
-      GET = {}; 
-      params.forEach(function (value, key) { GET[key] = value }); 
 
-      
-
-      </script>
   <!--figure out how to make it fit in page"-->
-  <div id="uName">
-    <br><script>
-    //Getting email, name, and artist name values and putting it into the request page for personalization
-   name = GET[`name`];
-
-    document.write(`
-    <h2>  ${name}.</h2>
-    `)
-    </script></div>
+  <div id="uName">PLAYER</div>
   <div id="score"></div>
   <canvas id="tetris" width="240" height="400" />
   <script src="tetris.js"></script>
