--- a/Ra_Ashikawa_Kelliher_assigment4/public/playbutton.html
+++ b/Ra_Ashikawa_Kelliher_assigment4/public/playbutton.html
@@ -10,16 +10,19 @@
       font-size: 1.5em;
       text-align: center;
     }
+
     html {
       display: flex;
       justify-content: space-around;
       background-position: center;
       overflow: hidden;
     }
+
     #Controls {
       height: 100vh;
       font-family: 'Press Start 2P', cursive;
     }
+
     #startBtn {
       border-color: white;
       background: none;
@@ -34,16 +37,23 @@
       -ms-transform: translate(-50%, -50%);
       image-resolution: 2000dpi;
     }
+
     #container {
       display: inline-block;
       position: relative;
     }
   </style>
- <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <html lang="en">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Start Page</title>
 
 <body>
   <header div id="container">
-
+    <!--makes the playbutton image a clickable object that redirects to homepage.html-->
     <button type="button" id="startBtn" onclick="">
       <a href="./homepage.html"> <img
           src="https://1.bp.blogspot.com/-fVAKH-3TLuo/W5onDDHje0I/AAAAAAAAB4I/q2ooE6GuzQkS80dtw1JILXjFWdfQ3IKkwCLcBGAs/s1600/breaoutplay.png"></a>
@@ -52,6 +62,8 @@
     <!--Changing position of texts -->
     <a href="tetris.html"></a>
     </div>
+
+    <!--shows texts above the playbutton that shows the controls for the game-->
     <section id="Controls" align="left">
       <h1>CONTROLS ARE AS FOLLOWS:</h1>
       <br>
@@ -68,6 +80,7 @@
 
 
     <script>
+
       var startBtn = document.getElementById('startBtn');
     </script>
 </body>
